telas de times e time implementadas

--- a/src/pages/views/jogador.ejs
+++ b/src/pages/views/jogador.ejs
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página do Jogador</title>
+    <!-- Inclua o Materialize CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
     <style>
-        body {
+body {
     background-color: #001f3f;
     /* Azul marinho */
     color: #FFFFFF;
@@ -151,5 +154,9 @@
             return age;
         }
     </script>
+
+
+<!-- Inclua o Materialize JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
