--- a/src/pages/views/jogador.ejs
+++ b/src/pages/views/jogador.ejs
@@ -94,10 +94,10 @@ body {
     <div class="player-page">
         <div class="player-details">
             <h1 class="player-name">
-                <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/6430.png" alt="Foto do jogador">
+                <img src="" alt="Foto do jogador">
                 <%= jogador.nome %> <%= jogador.sobrenome %> 
             </h1>
-            <p class="player-info">Altura: <%= jogador.altura %>m | Número: <%= jogador.camisa %> | Posição: <%= jogador.posicao %> | Aniversário: <%= jogador.idade.toLocaleDateString()      %></p>
+            <p class="player-info">Altura: <%= jogador.altura %>m | Número: <%= jogador.camisa %> | Posição: <%= jogador.posicao %> | Aniversário: <%= jogador.age %></p>
         </div>
         <div class="player-stats">
             <h2 class="stats-heading">Estatísticas</h2>
