--- a/src/pages/views/times.ejs
+++ b/src/pages/views/times.ejs
@@ -36,6 +36,12 @@
             max-width: 50px;
             height: auto;
         }
+
+        /* Adicione esta classe CSS */
+        .team-link {
+            text-decoration: none;
+            color: #FFFFFF;
+        }
     </style>
 </head>
 <body>
@@ -48,8 +54,11 @@
                         <tr>
                     <% } %>
                     <td>
-                        <img class="team-logo" src="<%= times[i].logo %>" alt="Logo do Time">
-                        <p><%= times[i].nome %></p>
+                        <!-- Use a tag <a> para criar um link -->
+                            <a class="team-link" href="/time/<%= times[i].idTime %>">
+                                <img class="team-logo" src="<%= times[i].logo %>" alt="Logo do Time">
+                                <p><%= times[i].nome %></p>
+                            </a>
                     </td>
                     <% if (i % 6 === 5 || i === times.length - 1) { %>
                         </tr>
