--- a/src/pages/views/jogador.ejs
+++ b/src/pages/views/jogador.ejs
@@ -6,157 +6,216 @@
     <title>Página do Jogador</title>
     <!-- Inclua o Materialize CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
+    <!-- Inclua o Materialize CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Inclua o FullCalendar CSS -->
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.8/index.global.min.js'></script>
+    
+
     <style>
 body {
-    background-color: #001f3f;
-    /* Azul marinho */
-    color: #FFFFFF;
-    /* Branco para o texto */
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  background-color: #001f3f;
+  color: #FFFFFF;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .player-page {
-    max-width: 1400px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #002D62;
-    /* Azul marinho mais escuro */
-    border-radius: 5px;
+  max-width: 1800px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #002D62;
+  border-radius: 5px;
 }
 
 .player-details {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .player-name {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 32px;
-    margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  margin-bottom: 10px;
 }
 
 .player-name img {
-    width: 200px;
-    height: 200px;
-    margin-right: 10px;
+  width: 200px;
+  height: 200px;
+  margin-right: 10px;
 }
 
 .player-info {
-    font-size: 18px;
+  font-size: 18px;
+}
+
+.calendario {
+  float: right;
+  width: 50%;
+  padding: 20px;
+}
+
+.player-stats {
+  float: left;
+  width: 50%;
+  padding: 20px;
 }
 
 .stats-heading {
-    font-size: 24px;
-    margin-bottom: 10px;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .stats-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
 }
 
 .stats-table th,
 .stats-table td {
-    padding: 10px;
-    text-align: center;
-    border-bottom: 1px solid #FFFFFF;
-    /* Branco */
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid #FFFFFF;
 }
 
 .stats-table th {
-    background-color: #FF4500;
-    /* Laranja */
+  background-color: #FF4500;
 }
 
 .stats-table tbody tr:nth-child(even) {
-    background-color: #001845;
-    /* Azul marinho mais escuro */
+  background-color: #001845;
 }
 
 .stats-table tbody tr:nth-child(odd) {
-    background-color: #003C8F;
-    /* Azul marinho médio */
+  background-color: #003C8F;
 }
 
 .stats-table tbody td {
-    color: #FFFFFF;
-    /* Branco para o texto */
+  color: #FFFFFF;
 }
+
     </style>
 </head>
 <body>
     <div class="player-page">
         <div class="player-details">
             <h1 class="player-name">
-                <img src="" alt="Foto do jogador">
-                <%= jogador.nome %> <%= jogador.sobrenome %> 
+                <% if (jogador.foto) { %>
+                    <img src="<%= jogador.foto %>" alt="Foto do jogador">
+                <% } else { %>
+                    <i class="material-icons medium">person</i>
+                <% } %>
+                <span style="margin-right: 10px;"><%= jogador.nome %> <%= jogador.sobrenome %></span>
+                <a class="team-link" href="/time/<%= time.idTime %>">
+                    <img class="team-logo" src="<%= time.logo %>" alt="Logo do Time" style="max-width: 50px; height: auto;">
+                </a>
             </h1>
-            <p class="player-info">Altura: <%= jogador.altura %>m | Número: <%= jogador.camisa %> | Posição: <%= jogador.posicao %> | Aniversário: <%= jogador.age %></p>
+            <p class="player-info">Altura: <%= jogador.altura %>m | Número: <%= jogador.camisa %> | Posição: <%= jogador.posicao %> | Idade: <%= jogador.idade %></p>
         </div>
         <div class="player-stats">
-            <h2 class="stats-heading">Estatísticas</h2>
-            <div style="overflow-x: auto;">
-                <table class="stats-table">
-                    <thead>
-                        <tr>
-                            <th>Total Jogos</th>
-                            <th>Pontos</th>
-                            <th>Assistências</th>
-                            <th>Rebotes</th>
-                            <th>Arremessos</th>
-                            <th>Arremessos certos</th>
-                            <th>Tentativas 3 pontos</th>
-                            <th>Acertos 3 pontos</th>
-                            <th>Tentativas 2 pontos</th>
-                            <th>Acertos 2 pontos</th>
-                            <th>Lances Livres</th>
-                            <th>Acertos lances livres</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
-                    </tbody>
-                </table>
+            <h1>Estatísticas</h1>
+            <table class="stats-table">
+                <tbody>
+                    <tr>
+                        <td>Total de Jogos</td>
+                        <td><%= media.totalJogos %></td>
+                    </tr>
+                    <tr>
+                        <td>Pontos</td>
+                        <td><%= media.mediaPontos.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Assistências</td>
+                        <td><%= media.mediaAssists.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Rebotes</td>
+                        <td><%= media.mediaTotReb.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Arremessos</td>
+                        <td><%= media.mediaFga.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Arremessos Certos</td>
+                        <td><%= media.mediaFgm.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Tentativas de 3 Pontos</td>
+                        <td><%= media.mediaTpa.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Acertos de 3 Pontos</td>
+                        <td><%= media.mediaTpm.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Tentativas de 2 Pontos</td>
+                        <td><%= (media.mediaFga - media.mediaTpa).toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Acertos de 2 Pontos</td>
+                        <td><%= (media.mediaFgm - media.mediaTpm).toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Lances Livres</td>
+                        <td><%= media.mediaFta.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Acertos de Lances Livres</td>
+                        <td><%= media.mediaFtm.toFixed(2) %></td>
+                    </tr>
+                    <tr>
+                        <td>Turnovers</td>
+                        <td><%= media.mediaTurnovers.toFixed(2) %></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="calendario">
+            <h1>Calendário</h1>
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <div id="calendar"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-        // Função para calcular a idade com base na data de nascimento
-        function calculateAge(dateOfBirth) {
-            const birthDate = new Date(dateOfBirth);
-            const currentDate = new Date();
-            let age = currentDate.getFullYear() - birthDate.getFullYear();
-
-            // Verificar se ainda não completou o aniversário no ano atual
-            if (currentDate.getMonth() < birthDate.getMonth() ||
-                (currentDate.getMonth() === birthDate.getMonth() && currentDate.getDate() < birthDate.getDate())) {
-                age--;
-            }
-
-            return age;
-        }
+        document.addEventListener('DOMContentLoaded', function() {
+            var calendarEl = document.getElementById('calendar');
+    
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                dateClick: function(info) {
+                    var clickedDate = info.dateStr;
+                    window.location.href = '/partidas?data=' + clickedDate;
+                }
+            });
+    
+            calendar.render();
+        });
     </script>
 
 
 <!-- Inclua o Materialize JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+<!-- Inclua o FullCalendar CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.7.2/main.min.css">
+
+<!-- Inclua o FullCalendar JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.7.2/main.min.js"></script>
+
+
 </body>
 </html>
